# cbound2

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/include/common/: color.hpp  hashes.hpp  logging.hpp  matrix.hpp  paths.hpp  rectangle.hpp  slot-map.hpp  string.hpp
core/include/core/anim/: sequence.hpp  sequencer.hpp  text-drawl.hpp
core/include/core/collision/: collision.hpp
core/include/core/input/: action.hpp  context.hpp  gamepad.hpp  input.hpp  key.hpp  keyboard.hpp
core/include/core/render/: font.hpp  framebuffer.hpp  post-process.hpp  render-common.hpp  render.hpp  shader.hpp  sprite-batch.hpp  sprite.hpp  tex-coords.hpp  text-batch.hpp  texture.hpp  tile-batch.hpp  tiles.hpp  uniform-buffer.hpp
core/include/core/render/glinterface/: framebuffer.hpp  mapped-buffer.hpp  stream-buffer.hpp
core/include/core/resource/: load-file.hpp  load-shader.hpp  load-texture.hpp  resource-cache.hpp  resource.hpp
core/include/core/script/: common.hpp  scheduler.hpp  script.hpp
core/include/core/text/: control-codes.hpp  database.hpp
core/include/core/tiles/: tiles.hpp
core/source/anim/: sequencer.cpp  text-drawl.cpp
core/source/collision/: tile-collision.cpp
core/source/common/: color.cpp  paths.cpp  string.cpp
core/source/input/: gamepad.cpp  input.cpp  keyboard.cpp
core/source/render/: framebuffer.cpp  post-process.cpp  render-common.cpp  render.cpp  shader.cpp  sprite-batch.cpp  text-batch.cpp  texture.cpp  tile-batch.cpp  tiles.cpp  uniform-buffer.cpp
core/source/resource/: load-font.cpp  load-input-conf.cpp  load-shader.cpp  load-texture.cpp  load-tilemap.cpp  load-tileset.cpp
core/source/script/: common.cpp  scheduler.cpp  script.cpp
core/source/text/: control-codes.cpp
core/source/tiles/: tiles.cpp
editor/: CMakeLists.txt
editor/include/editor/: io.hpp  tiles.hpp
editor/source/: io.cpp  tiles.cpp
game/: CMakeLists.txt
game/resources/: Overworld.tmx  Overworld.tsx
game/resources/config/: input.xml
game/resources/fonts/: font.fnt  font1.fnt
game/resources/scripts/: Birb.lua  character-anims.lua  character.lua  coroutine.lua  dyn-camera.lua  functional.lua  npc.lua  scene1.lua  sprite.lua  ui.lua  window.lua
game/resources/shaders/: debug.f.glsl  debug.v.glsl  post.f.glsl  post.v.glsl  sprite.f.glsl  sprite.v.glsl  tile.f.glsl  tile.v.glsl  ui.v.glsl
game/resources/tilemaps/: overworld-map.lua
game/resources/tiles/: overworld-coll.xml  overworld.tmx  overworld.tsx
game/resources/tilesets/: Overworld.tsx  overworld-set.lua
game/source/: main.cpp
game/source/anim/: sprite-anim.hpp
game/source/ecs/: animator.cpp  animator.hpp  behavior.cpp  behavior.hpp  camera.hpp  collision.cpp  collision.hpp  entity.hpp  input.cpp  input.hpp  master-renderer.cpp  master-renderer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sprite-renderer.cpp  sprite-renderer.hpp  ui-manager.cpp  ui-manager.hpp  world.cpp  world.hpp
game/source/framework/: anim.cpp  anim.hpp  collision.cpp  collision.hpp  entity.hpp  framework.hpp  input.cpp  input.hpp  render.cpp  render.hpp  sprite.cpp  sprite.hpp  tiles.cpp  tiles.hpp  ui.cpp  ui.hpp  world.cpp  world.hpp
game/source/ui/: text.cpp  text.hpp  ui.cpp  ui.hpp  widget.hpp  window.cpp  window.hpp
resources/shaders/: post.f.glsl  sprite.f.glsl  sprite.v.glsl
scripts/: lua.py  resources.py  spritesheet.py  tabulator.py  tiles.py  tmx2lua.py  tsx2lua.py
source/core/: CMakeLists.txt
source/core/common/: logging.hpp  paths.cpp  rectangle.hpp
source/core/component/: camera.hpp  transform.hpp
source/core/render/: framebuffer.cpp  post-process.cpp  render-common.cpp  shader.cpp  shader.hpp  sprite-batch.cpp  sprite-batch.hpp  sprite.hpp  texture.cpp  texture.hpp
source/core/render/glinterface/: common.hpp  glprogram.cpp  glprogram.hpp  gltexture.cpp  gltexture.hpp  object.hpp  program.hpp  shader.hpp  stream-buffer.hpp
source/core/render/shaders/: draw_postprocess.fs
source/core/rendering/: image.hpp  palette.hpp  render-common.cpp  render-common.hpp  shader.cpp  shader.hpp  sprite-renderer.cpp  sprite-renderer.hpp  sprite.hpp  tilemap-renderer.cpp  tilemap-renderer.hpp  tileset.hpp
source/core/rendering/glinterface/: globject.hpp  gltexture.cpp
source/core/rendering/shaders/: draw_postprocess.vs  sprite.fs  sprite.vs
source/core/resource/: load-image.cpp  load-image.hpp  load-shader.cpp  load-shader.hpp  load-texture.cpp  load-texture.hpp  resource-cache.hpp  resource.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
source/game/: CMakeLists.txt  main.cpp
